[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Levels/Tutorial/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Scenes/VisionMode.tscn" type="PackedScene" id=2]
[ext_resource path="res://LevelBuilding/Floor.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/Character/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://LevelBuilding/Walls.tres" type="TileSet" id=5]
[ext_resource path="res://Scenes/Levels/Door.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Lightmaps/radial.png" type="Texture" id=7]
[ext_resource path="res://Assets/Lightmaps/torchmap.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Briefcase.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Exit.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/GFX/Interface/PNG/crossair_redOutline.png" type="Texture" id=11]
[ext_resource path="res://UI/NumberPad/Light_Theme.tres" type="Theme" id=12]
[ext_resource path="res://Assets/GFX/Interface/PNG/glassPanel_corners.png" type="Texture" id=13]
[ext_resource path="res://Resources/Fonts/LabelText.tres" type="DynamicFont" id=14]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 40.0

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[node name="Tutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="VisionMode" parent="." instance=ExtResource( 2 )]
DARK = Color( 0.0196078, 0.00392157, 0.12549, 1 )

[node name="Floor" type="TileMap" parent="."]
z_index = -1
tile_set = ExtResource( 3 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65532, 16, 0, 65533, 16, 0, 65534, 16, 0, 65535, 16, 0, 0, 16, 0, 1, 16, 0, 2, 16, 0, 3, 16, 0, 4, 16, 0, 5, 16, 0, 6, 16, 0, 7, 16, 0, 8, 16, 0, 9, 16, 0, 10, 16, 0, 11, 16, 0, 12, 16, 0, 13, 16, 0, 14, 16, 0, 15, 16, 0, 16, 16, 0, 17, 16, 0, 18, 16, 0, 19, 16, 0, 20, 16, 0, 131068, 16, 0, 131069, 16, 0, 131070, 16, 0, 131071, 16, 0, 65536, 16, 0, 65537, 16, 0, 65538, 16, 0, 65539, 16, 0, 65540, 16, 0, 65541, 16, 0, 65542, 16, 0, 65543, 16, 0, 65544, 16, 0, 65545, 16, 0, 65546, 16, 0, 65547, 16, 0, 65548, 16, 0, 65549, 16, 0, 65550, 16, 0, 65551, 16, 0, 65552, 16, 0, 65553, 16, 0, 65554, 16, 0, 65555, 16, 0, 65556, 16, 0, 196604, 16, 0, 196605, 16, 0, 196606, 16, 0, 196607, 16, 0, 131072, 16, 0, 131073, 16, 0, 131074, 16, 0, 131075, 16, 0, 131076, 16, 0, 131077, 16, 0, 131078, 16, 0, 131079, 16, 0, 131080, 16, 0, 131081, 16, 0, 131082, 16, 0, 131083, 16, 0, 131084, 16, 0, 131085, 16, 0, 131086, 16, 0, 131087, 16, 0, 131088, 16, 0, 131089, 16, 0, 131090, 16, 0, 131091, 16, 0, 131092, 16, 0, 262140, 16, 0, 262141, 16, 0, 262142, 16, 0, 262143, 16, 0, 196608, 16, 0, 196609, 16, 0, 196610, 16, 0, 196611, 16, 0, 196612, 16, 0, 196613, 16, 0, 196614, 16, 0, 196615, 16, 0, 196616, 16, 0, 196617, 16, 0, 196618, 16, 0, 196619, 16, 0, 196620, 16, 0, 196621, 16, 0, 196622, 16, 0, 196623, 16, 0, 196624, 16, 0, 196625, 16, 0, 196626, 16, 0, 196627, 16, 0, 196628, 16, 0, 327676, 16, 0, 327677, 16, 0, 327678, 16, 0, 327679, 16, 0, 262144, 16, 0, 262145, 16, 0, 262146, 16, 0, 262147, 16, 0, 262148, 16, 0, 262149, 16, 0, 262150, 16, 0, 262151, 16, 0, 262152, 16, 0, 262153, 16, 0, 262154, 16, 0, 262155, 16, 0, 262156, 16, 0, 262157, 16, 0, 262158, 16, 0, 262159, 16, 0, 262160, 16, 0, 262161, 16, 0, 262162, 16, 0, 262163, 16, 0, 262164, 16, 0, 327685, 16, 0, 327686, 16, 0, 327687, 16, 0, 327688, 16, 0, 327689, 16, 0, 327690, 16, 0, 327691, 16, 0, 327692, 16, 0, 327693, 16, 0, 327694, 16, 0, 327695, 16, 0, 327696, 16, 0, 327697, 16, 0, 327698, 16, 0, 327699, 16, 0, 327700, 16, 0, 393221, 16, 0, 393222, 16, 0, 393223, 16, 0, 393224, 16, 0, 393225, 16, 0, 393226, 16, 0, 393227, 16, 0, 393228, 16, 0, 393229, 16, 0, 393230, 16, 0, 393231, 16, 0, 393232, 16, 0, 393233, 16, 0, 393234, 16, 0, 393235, 16, 0, 393236, 16, 0, 458757, 16, 0, 458758, 16, 0, 458759, 16, 0, 458760, 16, 0, 458761, 16, 0, 458762, 16, 0, 458763, 16, 0, 458764, 16, 0, 458765, 16, 0, 458766, 16, 0, 458767, 16, 0, 458768, 16, 0, 458769, 16, 0, 458770, 16, 0, 458771, 16, 0, 458772, 16, 0, 524294, 16, 0, 524295, 16, 0, 524296, 16, 0, 524297, 16, 0, 524298, 16, 0, 524299, 16, 0, 524300, 16, 0, 524301, 16, 0, 524302, 16, 0, 524303, 16, 0, 524304, 16, 0, 524305, 16, 0, 524306, 16, 0, 524307, 16, 0, 524308, 16, 0, 589830, 16, 0, 589831, 16, 0, 589832, 16, 0, 589833, 16, 0, 589834, 16, 0, 589835, 16, 0, 589836, 16, 0, 589837, 16, 0, 589838, 16, 0, 589839, 16, 0, 589840, 16, 0, 589841, 16, 0, 589842, 16, 0, 589843, 16, 0, 589844, 16, 0, 655366, 16, 0, 655367, 16, 0, 655368, 16, 0, 655369, 16, 0, 655370, 16, 0, 655371, 16, 0, 655372, 16, 0, 655373, 16, 0, 655374, 16, 0, 655375, 16, 0, 655376, 16, 0, 655377, 16, 0, 655378, 16, 0, 655379, 16, 0, 655380, 16, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( -102.428, 135.302 )

[node name="Wall" type="TileMap" parent="."]
z_index = 10
tile_set = ExtResource( 5 )
collision_layer = 32
collision_mask = 131
format = 1
tile_data = PoolIntArray( -5, 1, 0, -4, 1, 2, -3, 1, 2, -2, 1, 2, -1, 1, 2, -65536, 1, 2, -65535, 1, 2, -65534, 1, 2, -65533, 1, 2, -65532, 1, 2, -65531, 1, 2, -65530, 1, 2, -65529, 1, 2, -65528, 1, 2, -65527, 1, 2, -65526, 1, 2, -65525, 1, 2, -65524, 1, 3, -65523, 1, 2, -65522, 1, 2, -65521, 1, 2, -65520, 1, 2, -65519, 1, 2, -65518, 1, 2, -65517, 1, 2, -65516, 1, 2, -65515, 1, 1, 65531, 1, 65538, 12, 1, 65538, 21, 1, 65538, 131067, 1, 65538, 65540, 1, 65541, 65544, 1, 65541, 65548, 1, 65538, 65557, 1, 65538, 196603, 1, 65538, 131076, 1, 65538, 131080, 1, 65538, 131084, 1, 65538, 131093, 1, 65538, 262139, 1, 65538, 196612, 1, 65538, 196616, 1, 65538, 196620, 1, 65538, 196629, 1, 65538, 327675, 1, 65536, 327676, 1, 2, 327677, 1, 2, 327678, 1, 2, 327679, 1, 2, 262144, 1, 2, 262145, 1, 2, 262146, 1, 2, 262147, 1, 2, 262148, 1, 4, 262149, 1, 3, 262150, 1, 2, 262151, 1, 2, 262152, 1, 65537, 262156, 1, 65538, 262165, 1, 65538, 327685, 1, 65538, 327692, 1, 65538, 327701, 1, 65538, 393221, 1, 65538, 393228, 1, 65538, 393237, 1, 65538, 458757, 1, 65538, 458764, 1, 65538, 458773, 1, 65538, 524293, 1, 65538, 524300, 1, 65538, 524309, 1, 65538, 589829, 1, 65538, 589836, 1, 6, 589845, 1, 65538, 655365, 1, 65538, 655381, 1, 65538, 720901, 1, 65536, 720902, 1, 2, 720903, 1, 2, 720904, 1, 2, 720905, 1, 2, 720906, 1, 2, 720907, 1, 2, 720908, 1, 2, 720909, 1, 2, 720910, 1, 2, 720911, 1, 2, 720912, 1, 2, 720913, 1, 2, 720914, 1, 2, 720915, 1, 2, 720916, 1, 2, 720917, 1, 65537 )

[node name="Door" parent="." instance=ExtResource( 6 )]
position = Vector2( 544.018, 32.1453 )
rotation = 1.5708

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 152.32, 22.2134 )
texture = ExtResource( 7 )
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 330.027, 182.467 )
rotation = -0.6441
texture = ExtResource( 8 )
offset = Vector2( 150, 0 )
texture_scale = 0.5
shadow_enabled = true

[node name="Briefcase" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 1285.2, 663.228 )

[node name="Exit" parent="." instance=ExtResource( 10 )]
editor/display_folded = true
position = Vector2( 1191.59, 136.454 )

[node name="ObjectivePointer" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -183.524, 140.975 )

[node name="Sprite" type="Sprite" parent="ObjectivePointer"]
texture = ExtResource( 11 )

[node name="Light2D" type="Light2D" parent="ObjectivePointer"]
texture = ExtResource( 11 )
mode = 2

[node name="ObjectiveMarkers" type="Node2D" parent="."]
editor/display_folded = true

[node name="MoveMarker" type="Position2D" parent="ObjectiveMarkers"]
editor/display_folded = true
position = Vector2( 277.667, 33.3201 )

[node name="MoveArea" type="Area2D" parent="ObjectiveMarkers/MoveMarker"]
editor/display_folded = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveMarkers/MoveMarker/MoveArea"]
shape = SubResource( 1 )

[node name="DoorMarker" type="Position2D" parent="ObjectiveMarkers"]
editor/display_folded = true
position = Vector2( 604.872, 35.4166 )

[node name="DoorArea" type="Area2D" parent="ObjectiveMarkers/DoorMarker"]
editor/display_folded = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveMarkers/DoorMarker/DoorArea"]
shape = SubResource( 2 )

[node name="NightVisionMarker" type="Position2D" parent="ObjectiveMarkers"]
editor/display_folded = true
position = Vector2( 664.296, 487.357 )

[node name="NightVisionArea" type="Area2D" parent="ObjectiveMarkers/NightVisionMarker"]
editor/display_folded = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveMarkers/NightVisionMarker/NightVisionArea"]
shape = SubResource( 3 )

[node name="LootMarker" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 1285.2, 663.228 )

[node name="ExitMarker" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 1191.59, 136.454 )

[node name="HUD" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="MessageDisplay" type="Control" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -196.317
margin_right = 200.0
margin_bottom = -26.3168
rect_min_size = Vector2( 400, 170 )
theme = ExtResource( 12 )

[node name="NinePatchRect" type="NinePatchRect" parent="HUD/MessageDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="HUD/MessageDisplay/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 14 )
autowrap = true
[connection signal="body_entered" from="Briefcase/BriefcaseArea" to="." method="_on_BriefcaseArea_body_entered"]
[connection signal="body_entered" from="ObjectiveMarkers/MoveMarker/MoveArea" to="." method="_on_MoveArea_body_entered"]
[connection signal="body_entered" from="ObjectiveMarkers/DoorMarker/DoorArea" to="." method="_on_DoorArea_body_entered"]
[connection signal="body_entered" from="ObjectiveMarkers/NightVisionMarker/NightVisionArea" to="." method="_on_NightVisionArea_body_entered"]

[editable path="Briefcase"]
